--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@ android:layout_width="match_parent"
 android:layout_height="match_parent"
 tools:context=".MainActivity">
 
+
     <FrameLayout
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
@@ -18,15 +19,15 @@ tools:context=".MainActivity">
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         app:fabCradleMargin="10dp"
-        app:fabCradleVerticalOffset="10dp"
-        app:fabCradleRoundedCornerRadius="10dp">
+        app:fabCradleVerticalOffset="5dp"
+        app:fabCradleRoundedCornerRadius="15dp">
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:layout_marginRight="16dp"
+        android:layout_marginEnd="16dp"
         app:menu="@menu/bottom_nav"
         android:background="@drawable/background"/>
 
@@ -37,7 +38,7 @@ tools:context=".MainActivity">
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_map"
-        android:background="@drawable/background"
-        app:layout_anchor="@id/bottom_app"/>
+        app:layout_anchor="@id/bottom_app"
+        android:background="@drawable/background"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
