--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -5,7 +5,7 @@
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
     </style>
 
-    <style name="Base.Theme.BottomNav" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Base.Theme.BottomNav" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <item name="colorPrimary">#FB6E64</item>
         <item name="colorPrimaryVariant">#FB6E64</item>
