--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.ParkMe" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Base.Theme.ParkMe" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <item name="colorPrimary">#FB6E64</item>
         <item name="colorPrimaryVariant">#FB6E64</item>
