--- a/app/src/main/res/drawable/background.xml
+++ b/app/src/main/res/drawable/background.xml
@@ -3,6 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:padding="10dp">
 
-    <solid android:color="#00000000"/>
+    <solid android:color="@color/light_grey"/>
 
 </shape>
