--- a/app/src/main/res/drawable/round_btn.xml
+++ b/app/src/main/res/drawable/round_btn.xml
@@ -2,7 +2,6 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-
-    <solid android:color="@color/rose"/>
+    <solid android:color="@color/blue"/>
     <corners android:radius="100dp"/>
 </shape>
