--- a/app/src/main/res/drawable/round_btn_2.xml
+++ b/app/src/main/res/drawable/round_btn_2.xml
@@ -2,7 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#E2EAE7E7"/>
+    <solid android:color="@color/off_white"/>
+    <stroke android:width="2dp"
+        android:color="@color/blueLight"/>
     <corners android:radius="20dp"/>
 
 </shape>
