--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -39,10 +39,10 @@
         android:layout_marginTop="15dp">
 
         <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:passwordToggleEnabled="true"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+            app:passwordToggleEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/passwordInput"
@@ -100,7 +100,7 @@
             android:text="Sign Up"
             android:textSize="15dp"
             android:textStyle="bold"
-            android:textColor="@color/rose"
+            android:textColor="@color/blue"
             android:layout_marginLeft="5dp"/>
     </LinearLayout>
 
