--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -143,7 +143,7 @@
             android:text="Sign In"
             android:textSize="15dp"
             android:textStyle="bold"
-            android:textColor="@color/rose"
+            android:textColor="@color/blue"
             android:layout_marginLeft="5dp"/>
     </LinearLayout>
 
