--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -11,6 +11,7 @@
         android:title="@string/book"/>
     <item
         android:id="@+id/nav_map"
+        android:icon="@drawable/ic_map"
         android:title="@string/map"/>
     <item
         android:id="@+id/nav_notification"
