--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,17 +1,34 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.ParkMe" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <item name="colorPrimary">#FB6E64</item>
-        <item name="colorPrimaryVariant">#FB6E64</item>
+    <!-- Base application theme for Material 3 -->
+    <style name="Base.Theme.ParkMe" parent="Theme.Material3.DayNight.NoActionBar">
+        <!-- Customize your theme here using Material 3 color system. -->
+
+        <!-- Primary color (used for app bars, buttons, etc.) -->
+        <item name="colorPrimary">@color/blue</item>
+        <item name="colorPrimaryContainer">@color/blueLight</item>
         <item name="colorOnPrimary">@color/white</item>
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
-        <item name="colorSecondary">#E6E2E2</item>
-        <item name="colorSecondaryVariant">#E6E2E2</item>
+
+        <!-- Secondary color (used for floating action buttons, selection controls, etc.) -->
+        <item name="colorSecondary">@color/green</item>
+        <item name="colorSecondaryContainer">@color/greenLight</item>
         <item name="colorOnSecondary">@color/black</item>
+
+        <!-- Background color -->
+        <item name="android:colorBackground">@color/light_grey</item>
+        <item name="colorOnBackground">@color/black</item>
+
+        <!-- Error color -->
+        <item name="colorError">@color/muted_red</item>
+        <item name="colorOnError">@color/white</item>
+
+        <!-- Surface color -->
+        <item name="colorSurface">@color/off_white</item>
+        <item name="colorOnSurface">@color/black</item>
+
+
+        <item name="shapeAppearanceSmallComponent">@style/ShapeAppearance.Material3.SmallComponent</item>
+        <!-- ... other shape appearances ... -->
     </style>
-
-
 
     <style name="Theme.ParkMe" parent="Base.Theme.ParkMe" />
 </resources>
