--- a/app/src/main/res/drawable/round_btn_2.xml
+++ b/app/src/main/res/drawable/round_btn_2.xml
@@ -4,7 +4,7 @@
 
     <solid android:color="@color/off_white"/>
     <stroke android:width="2dp"
-        android:color="@color/blueLight"/>
+        android:color="@color/Lighter_blue"/>
     <corners android:radius="20dp"/>
 
 </shape>
