--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -1,57 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="16dp"
-    android:background="@drawable/round_corners"
-    app:behavior_peekHeight="50dp"
-    app:behavior_hideable="true"
-    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
+    android:background="@drawable/round_corners">
 
-    <!-- Card Number Input -->
+
+    <ImageView
+        android:id="@+id/remove"
+        android:layout_width="90dp"
+        android:layout_height="wrap_content"
+        android:scaleType="centerCrop"
+        android:src="@drawable/baseline_remove_24"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <TextView
+        android:id="@+id/titleTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="104dp"
+        android:layout_marginTop="40dp"
+        android:text="Add New Card"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.162"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/remove"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <EditText
-        android:id="@+id/editTextCardNumber"
+        android:id="@+id/cardHolderName"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:hint="Cardholder"
+        android:layout_marginTop="24dp"
+        app:layout_constraintTop_toBottomOf="@id/titleTextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <EditText
+        android:id="@+id/cardNumber"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="Card Number"
-        android:inputType="numberDecimal"
-        android:maxLength="16"
-        app:layout_constraintTop_toTopOf="parent"
+        android:inputType="number"
+        android:layout_marginTop="12dp"
+        app:layout_constraintTop_toBottomOf="@id/cardHolderName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    <!-- Expiry Date Input -->
     <EditText
-        android:id="@+id/editTextExpiry"
+        android:id="@+id/expiryDate"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Expiry Date"
+        android:hint="Expiry"
         android:inputType="date"
-        app:layout_constraintTop_toBottomOf="@id/editTextCardNumber"
+        app:layout_constraintTop_toBottomOf="@id/cardNumber"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toStartOf="@+id/cvv"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="12dp"/>
 
-    <!-- CVV Input -->
     <EditText
-        android:id="@+id/editTextCvv"
+        android:id="@+id/cvv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="cvv"
-        android:inputType="numberDecimal"
-        android:maxLength="3"
-        app:layout_constraintTop_toBottomOf="@id/editTextExpiry"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        android:hint="CVV"
+        android:inputType="numberPassword"
+        app:layout_constraintTop_toBottomOf="@id/cardNumber"
+        app:layout_constraintStart_toEndOf="@+id/expiryDate"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="12dp"/>
 
-    <!-- Submit Button -->
     <Button
-        android:id="@+id/buttonSubmit"
-        android:layout_width="0dp"
+        android:id="@+id/AddCardButton"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Add Card"
-        app:layout_constraintTop_toBottomOf="@id/editTextCvv"
+        app:layout_constraintTop_toBottomOf="@id/cvv"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="16dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
-
