--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -19,50 +19,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="28dp"/>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cardDetailsLayout"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/cardsRecyclerView"
         android:layout_width="0dp"
-        android:layout_height="81dp"
-        android:background="@drawable/round_btn_2"
-        android:visibility="gone"
+        android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/MyCard"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp">
-
-        <ImageView
-            android:id="@+id/cardIcon"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/credit_card"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginStart="16dp"/>
-
-        <TextView
-            android:id="@+id/cardDetails"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="•••• 1234  Exp: 12/24"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            app:layout_constraintStart_toEndOf="@+id/cardIcon"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginStart="16dp"
-            app:layout_constraintEnd_toStartOf="@+id/deleteCardButton" />
-
-        <ImageView
-            android:id="@+id/deleteCardButton"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:src="@drawable/delete"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginEnd="16dp" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_marginTop="16dp"/>
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
