--- a/app/src/main/res/layout/fragment_add_card_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_add_card_bottom_sheet.xml
@@ -15,19 +15,22 @@
         android:src="@drawable/close"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:contentDescription="@string/close" />
+        android:contentDescription="@string/remove_card" />
 
     <!-- Title Text -->
     <TextView
         android:id="@+id/titleTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginTop="16dp"
-        android:text="Add New Card"
+        android:text="@string/add_new_card"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <!-- Stripe Card Input Widget -->
     <com.stripe.android.view.CardInputWidget
@@ -44,8 +47,10 @@
         android:id="@+id/addCardButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Add Card"
+        android:text="@string/add_card"
         android:layout_marginTop="24dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         app:layout_constraintTop_toBottomOf="@id/cardInputWidget"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
