--- a/app/src/main/res/layout/parkingspot_bottom_sheet.xml
+++ b/app/src/main/res/layout/parkingspot_bottom_sheet.xml
@@ -8,14 +8,14 @@
 
     <ImageView
         android:id="@+id/imageParkingSpot"
-        android:layout_width="0dp"
-        android:layout_height="200dp"
-        android:scaleType="centerCrop"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="382dp"
+        android:layout_height="141dp"
         android:layout_marginTop="8dp"
-        android:src="@drawable/local_parking" />
+        android:scaleType="centerCrop"
+        android:src="@drawable/local_parking"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/bottom_sheet_title"
